fix: header spacing fixed

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -6,9 +6,15 @@
 
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  position: relative;
   .logo-wrapper {
+    position: absolute;
+    left: 0;
     height: 100%;
     max-width: 25%;
 
@@ -30,8 +36,7 @@
     display: flex;
     align-items: center;
     h1 {
-      font-size: 3rem;
-      padding-left: 5rem;
+      font-size: 4rem;
     }
   }
 }
